Aclarar el día de la semana que se realizan los cursos.

--- a/TE/GestionarElConflictoEnLasRelaciones.html
+++ b/TE/GestionarElConflictoEnLasRelaciones.html
@@ -23,7 +23,7 @@
             Dirigido a personas adultas que quieren mejorar la comunicación en sus relaciones.
         </p>
         <p style="color: red;">
-            Inicio: lunes, 17 de enero a las 19:00h
+            Tendrá lugar los lunes y comenzaremos el 17 de enero a las 19:00h.
         </p>
         <p>
             Se realizarán 10 sesiones con frecuencia semanal y 2h de duración.
