--- a/TE/TallerDuelo2021Trimestre1.html
+++ b/TE/TallerDuelo2021Trimestre1.html
@@ -27,7 +27,7 @@
             </i>
         </p>
         <p style="color: red;">
-            Fecha por determinar
+            Fecha por determinar.
         </p>
         <p>
             Se realizarán 14 sesiones con frecuencia semanal y 2h de duración.
@@ -57,7 +57,6 @@
                 Ficha de inscripción, foto y pago en efectivo o resguardo del ingreso.
             </li>
         </ol>
-
     </div>
 </body>
 </html>
