--- a/TE/PsicologiaPositiva2021Trimestre1.html
+++ b/TE/PsicologiaPositiva2021Trimestre1.html
@@ -23,7 +23,7 @@
             </i>.
         </p>
         <p style="color: red;">
-            Inicio: lunes, 24 de enero a las 18:00h
+            Tendrá lugar los lunes y comenzaremos el 24 de enero a las 18:00h.
         </p>
         <p>
             Se realizarán 10 sesiones con frecuencia semanal y 2h de duración.
