Aplazado el curso de gestionar el conflicto. Completo el curso de Psicología Positiva para la Depresión.

--- a/TE/GestionarElConflictoEnLasRelaciones.html
+++ b/TE/GestionarElConflictoEnLasRelaciones.html
@@ -22,8 +22,8 @@
             <br />
             Dirigido a personas adultas que quieren mejorar la comunicación en sus relaciones.
         </p>
-        <p style="color: red;">
-            Tendrá lugar los lunes y comenzaremos el 17 de enero a las 19:00h.
+        <p>
+            Tendrá lugar los lunes y comenzaremos el <span style="color: red;"><strong>24 de enero a las 19:00h</strong> (NUEVA FECHA).</span>
         </p>
         <p>
             Se realizarán 10 sesiones con frecuencia semanal y 2h de duración.
