--- a/TE/Calendario2021T1.html
+++ b/TE/Calendario2021T1.html
@@ -14,7 +14,7 @@
                 <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-gestionar-el-conflicto-en-las-relaciones-9280" style="color:dodgerblue">Gestionar el conflicto en las relaciones</a>
             </li>
             <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-de-psicologia-positiva-para-la-depresion-9281" style="color:dodgerblue">Taller de Psicología Positiva para la Depresión</a>
+                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-de-psicologia-positiva-para-la-depresion-9281" style="color:dodgerblue">Taller de Psicología Positiva para la Depresión</a><span style="color: red"> COMPLETO</span>
             </li>
             <li>
                 <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/desarrollo-personal-modulo-i-9282" style="color:dodgerblue">Desarrollo Personal módulo I</a>
