--- a/TE/PsicologiaPositiva2021Trimestre1.html
+++ b/TE/PsicologiaPositiva2021Trimestre1.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div>
+        <p style="color: red; ">
+            Curso completo, las inscripciones que se realicen a partir de ahora pasarán a la reserva por si hay alguna baja y en su defecto a la siguiente convocatoria del curso.
+        </p>
         <p>
             <span style="color: red; font-size: 125%;">
                 IMPORTANTE: No uses el enlace que se muestra más abajo y que dice <span style="color: #9e9019;">Inscríbete</span> <span style="color: #1a9e36;"><b>Formulario</b> de inscripción</span>.
