Gestionar el conflicto en las relaciones está completo.

--- a/TE/Calendario2021T1.html
+++ b/TE/Calendario2021T1.html
@@ -11,7 +11,7 @@
         </p>
         <ul>
             <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-gestionar-el-conflicto-en-las-relaciones-9280" style="color:dodgerblue">Gestionar el conflicto en las relaciones</a>
+                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-gestionar-el-conflicto-en-las-relaciones-9280" style="color:dodgerblue">Gestionar el conflicto en las relaciones</a><span style="color: red"> COMPLETO</span>
             </li>
             <li>
                 <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-de-psicologia-positiva-para-la-depresion-9281" style="color:dodgerblue">Taller de Psicología Positiva para la Depresión</a><span style="color: red"> COMPLETO</span>
