--- a/TE/PsicologiaPositiva2021Trimestre1.html
+++ b/TE/PsicologiaPositiva2021Trimestre1.html
@@ -35,8 +35,7 @@
             Gratuito.
         </p>
         <span style="color: red;">
-            Plazas limitadas por orden de inscripción. Se admitirán inscripciones hasta
-            completar plazas.
+            Plazas limitadas por orden de inscripción. Curso completo, las inscripciones que se realicen a partir de ahora pasarán a la reserva por si hay alguna baja y en su defecto a la siguiente convocatoria del curso.
         </span>
 
         <p>
