Actualización de información de taller de duelo.

--- a/TE/TallerDuelo2021Trimestre1.html
+++ b/TE/TallerDuelo2021Trimestre1.html
@@ -26,11 +26,11 @@
                 </strong>
             </i>
         </p>
-        <p style="color: red;">
-            Fecha por determinar.
+        <p>
+            Fecha: Será los miércoles y se inicia el día 9 de marzo de 2022 a las 20 horas.
         </p>
         <p>
-            Se realizarán 14 sesiones con frecuencia semanal y 2h de duración.
+            Se realizarán 12 sesiones con frecuencia semanal de 2 horas de duración.
         </p>
         <p style="color: green;">
             Gratuito.
