Cambio de fecha en bienestar emocional.

--- a/TE/BienestarEmocional2022.html
+++ b/TE/BienestarEmocional2022.html
@@ -17,7 +17,7 @@
             felicidad? ¿Cómo conseguirla? ¿Qué o quién me lo impide?
         </p>
         <p>
-            <span style="color: burlywood;">Duración:</span> 10 sesiones de 2h de duración, los jueves a las 20h. <strong>Inicio 7 de abril.</strong>
+            <span style="color: burlywood;">Duración:</span> 10 sesiones de 2h de duración, los jueves a las 20h. <span style="color: red;"><strong>Inicio 21 de abril</strong> (NUEVA FECHA).</span>
         </p>
         <p>
             <span style="color: burlywood;">
