Calendario de cursos octubre 2022.

--- a/TE/BuscandoMiBienestar202210.html
+++ b/TE/BuscandoMiBienestar202210.html
@@ -13,13 +13,13 @@
             </span>
         </p>
         <p>
-            <span style="color: burlywood;">Contenido:</span> Todos y todas aspiramos a sentirnos bien, pero... <strong>
+            Todos y todas aspiramos a sentirnos bien, pero... <strong>
                 ¿en qué consiste la
                 felicidad? ¿Cómo conseguirla? ¿Qué o quién me lo impide?
             </strong>
         </p>
         <p>
-            <span style="color: burlywood;">Duración:</span> 10 sesiones de 2h de duración, los miércoles a las 20h. <span style="color: red;"><strong>Inicio 19 de octubre</strong></span>
+            Duración: 10 sesiones de 2h de duración, los miércoles a las 20h. <span style="color: red;"><strong>Inicio 19 de octubre</strong></span>
         </p>
         <p>
             La felicidad es una combinación de dos factores: el <strong>placer</strong> que sentimos
