--- a/TE/Calendario2022T4.html
+++ b/TE/Calendario2022T4.html
@@ -9,22 +9,121 @@
         <p>
             <span>Nos agrada compartir con vosotr@s el calendario de cursos de octubre de 2022. Incluye los cursos: </span>
         </p>
-        <ul>
-            <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-gestionar-el-conflicto-en-las-relaciones-en-octubre-de-2022-9463" style="color:dodgerblue">Gestionar el conflicto en las relaciones</a>
-            </li>
-            <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-buscando-mi-bienestar-en-octubre-de-2022-9464" style="color:dodgerblue">Buscando mi bienestar</a>
-            </li>
-            <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-inteligencia-emocional-en-octubre-de-2022-9465" style="color:dodgerblue">Inteligencia emocional</a>
-            </li>
-            <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-desarrollo-personal-modulo-ii-en-octubre-de-2022-9466" style="color:dodgerblue">Desarrollo Personal módulo II</a>
-            </li>
-        </ul>
+        <h4>Gestionar el conflicto en las relaciones</h4>
         <p>
-            <span>Podéis ver los objetivos de los cursos y las fechas de impartición haciendo clic en los títulos de los cursos. El plazo de matrícula se abrirá el lunes 19 de septiembre.</span>
+            Nuestra forma de comunicarnos dice mucho de cómo somos y es fundamental a la hora de relacionarnos.
+        </p>
+        <p>
+            <strong>
+                <i>
+                    Trabajaremos en torno a técnicas de comunicación para resolver los conflictos que surgen en nuestras relaciones cotidianas
+                </i>
+            </strong>. Sobre todo, nos basaremos en la denominada Comunicación No Violenta, desarrollada por Marshall Rosenberg.
+            <br />
+            Dirigido a personas adultas que quieren mejorar la comunicación en sus relaciones.
+        </p>
+        <p>
+            Tendrá lugar los lunes y comenzaremos el <span style="color: red;"><strong>17 de octubre a las 18:00h</strong>.</span>
+        </p>
+        <p>
+            Se realizarán 9 sesiones con frecuencia semanal y 2h de duración.
+        </p>
+        <p style="color: green;">
+            Aportación 40€.
+        </p>
+        <p style="color: red;">
+            Plazas limitadas por orden de inscripción. EL PLAZO DE MATRÍCULA SE ABRIRÁ EL LUNES 19 DE SEPTIEMBRE.
+        </p>
+        <h4>Buscando mi bienestar</h4>
+        <p>
+            Todos y todas aspiramos a sentirnos bien, pero... <strong>
+                ¿en qué consiste la
+                felicidad? ¿Cómo conseguirla? ¿Qué o quién me lo impide?
+            </strong>
+        </p>
+        <p>
+            La felicidad es una combinación de dos factores: el <strong>placer</strong> que sentimos
+            ante lo que nos ocurre o tenemos en nuestra vida y el <strong>propósito</strong>,
+            finalidad o sentido que encontramos en lo que hacemos
+        </p>
+        <p>
+            Dirigido a personas adultas que quieran reflexionar acerca de cómo
+            gestionan su vida en el día a día, de qué es la felicidad y cómo pueden
+            hacerse protagonistas para alcanzarla.
+        </p>
+        <p>
+            Tendrá lugar los miércoles y comenzaremos el <span style="color: red;"><strong>19 de octubre a las 20:00h</strong>.</span>
+        </p>
+        <p>
+            Se realizarán 10 sesiones con frecuencia semanal y 2h de duración.
+        </p>
+        <p style="color: green;">
+            Aportación 40€.
+        </p>
+        <p>
+            <span style="color: red;">
+                Plazas limitadas por orden de inscripción. EL PLAZO DE MATRÍCULA SE ABRIRÁ EL LUNES 19 DE SEPTIEMBRE.
+            </span>
+        </p>
+        <h4>Inteligencia emocional</h4>
+        <p>
+            <strong>Las emociones</strong> pueden ser nuestras aliadas en la medida que ampliamos
+            la conciencia que tenemos de ellas. Identificarlas, nombrarlas, conocer
+            su función las convierte en un recurso personal, <strong>una guía interna</strong>.
+        </p>
+        <p>
+            Prestaremos especial atención a aquello que la inteligencia emocional
+            puede implicar en tres terrenos que consideramos fundamentales: <strong>
+                el YO, el TÚ y el NOSOTROS, atendiendo así tanto la parte individual como la
+                relacional.
+            </strong>
+        </p>
+        <p>
+            Tendrá lugar los jueves y comenzaremos el <span style="color: red;"><strong>20 de octubre a las 20:00h</strong></span>
+        </p>
+        <p>
+            Se realizarán 8 sesiones con frecuencia semanal y 2h de duración.
+        </p>
+        <p style="color: green;">
+            Aportación 40€.
+        </p>
+        <p>
+            <span style="color: red;">
+                Plazas limitadas por orden de inscripción. EL PLAZO DE MATRÍCULA SE ABRIRÁ EL LUNES 19 DE SEPTIEMBRE.
+            </span>
+        </p>
+        <h4>Desarrollo Personal Módulo II</h4>
+        <p style="font-style: italic;">
+            Este curso está dirigido a personas que desean formarse para fomentar su propio crecimiento y el de los demás,
+
+            es parte de la formación del voluntariado de Teléfono de la Esperanza
+            , pero debido a su interés social,
+            está abierto a personas que deseen formarse y conocerse a nivel personal al margen de su colaboración.
+        </p>
+        <p>
+            <strong>
+                Es condición para acceder a esta segunda parte haber completado el
+                módulo I.
+            </strong>
+        </p>
+        <p>
+            Tras haber profundizado en las dimensiones cognitiva y afectiva a lo
+            largo del módulo I. En esta segunda fase emprenderemos un proceso de
+            cambio personal fijando metas y diseñando un plan de acción realista y
+            viable, profundizando en las dimensiones social y espiritual.
+        </p>
+        <p>
+            <b>Comienzo intensivo:</b> <span style="color: red;">Días 30 de septiembre, 1 y 2 de octubre </span> (viernes 17-21h,
+            sábado 9:00-14h / 16-21h, y domingo 9:30-14:30h)
+        </p>
+        <p>
+            <b>Seguimiento:</b> 8 sesiones con frecuencia semanal y 2h de duración <span style="color: red;">*el día se concreta en el intensivo. </span>
+        </p>
+        <p style="color: green;">
+            Aportación 125€.
+        </p>
+        <p style="color: red;">
+            Plazas limitadas por orden de inscripción. LA FECHA LÍMITE PARA REALIZAR LA MATRÍCULA ES EL 15 DE SEPTIEMBRE.
         </p>
     </div>
 </body>
