--- a/TE/DesarrolloPersonalModuloII202210.html
+++ b/TE/DesarrolloPersonalModuloII202210.html
@@ -41,9 +41,9 @@
         <p style="color: green;">
             Aportación 125€.
         </p>
-        <span style="color: red;">
+        <p style="color: red;">
             Plazas limitadas por orden de inscripción. EL PLAZO DE MATRÍCULA SE ABRIRÁ EL LUNES 19 DE SEPTIEMBRE.
-        </span>
+        </p>
         <br />
         <br />
         <strong>CÓMO REALIZAR LA MATRÍCULA, 2 OPCIONES:</strong>
@@ -51,9 +51,7 @@
             <li>
                 <span style="color:deepskyblue">SE REALIZARÁ TODO POR MAIL</span>: Mandando a
                 <a href="mailto: albacete@telefonodelaesperanza.org">albacete@telefonodelaesperanza.org</a>
-                ficha de inscripción (solicitar por mail o
-                <strong>descargar </strong>
-                <a href="https://docs.google.com/document/d/1ILHDkTNN74kBufMIxHnYX3liK-sTIlyY/edit?usp=sharing&ouid=109398326214633490453&rtpof=true&sd=true" style="color:dodgerblue">aquí</a>), foto y resguardo del ingreso.
+                ficha de inscripción (solicitar por mail), foto y resguardo del ingreso.
             </li>
             <li>
                 <span style="color:deepskyblue">
