Revert "Calendario de cursos octubre 2022."
This reverts commit 0314ff8256cd08c90dbd574da91420b3747f335c.

--- a/TE/InteligenciaEmocional202210.html
+++ b/TE/InteligenciaEmocional202210.html
@@ -16,19 +16,16 @@
             <strong>Las emociones</strong> pueden ser nuestras aliadas en la medida que ampliamos
             la conciencia que tenemos de ellas. Identificarlas, nombrarlas, conocer
             su función las convierte en un recurso personal, <strong>una guía interna</strong>.
+</p>
+        <p>
+            <span style="color: burlywood;">Duración:</span> 8 sesiones de 2h de duración, los jueves a las 20h. <span style="color: red;"><strong>Inicio 20 de octubre</strong></span>
         </p>
         <p>
             Prestaremos especial atención a aquello que la inteligencia emocional
             puede implicar en tres terrenos que consideramos fundamentales: <strong>
-                el YO, el TÚ y el NOSOTROS, atendiendo así tanto la parte individual como la
-                relacional.
-            </strong>
-        </p>
-        <p>
-            Tendrá lugar los jueves y comenzaremos el <span style="color: red;"><strong>20 de octubre a las 20:00h</strong></span>
-        </p>
-        <p>
-            Se realizarán 8 sesiones con frecuencia semanal y 2h de duración.
+    el YO, el TÚ y el NOSOTROS, atendiendo así tanto la parte individual como la
+    relacional.
+</strong>
         </p>
         <p style="color: green;">
             Aportación 40€.
