Actualizar estado de los cursos a 17 de octubre de 2022.

--- a/TE/GestionarElConflictoEnLasRelaciones202210.html
+++ b/TE/GestionarElConflictoEnLasRelaciones202210.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div>
+        <p style="color: red; font-size: 125%; ">
+            Excepcionalmente se permitirán inscripciones antes de la segunda sesión del curso que tendrá lugar el próximo lunes 24 de octubre.
+        </p>
         <p>
             <span style="color: red; font-size: 125%;">
                 IMPORTANTE: No uses el enlace que se muestra más abajo y que dice <span style="color: #9e9019;">Inscríbete</span> <span style="color: #1a9e36;"><b>Formulario</b> de inscripción</span>.
