Encuentro de Navidad y otras publicaciones pendientes.

--- a/TE/CharlaVillacerrada.html
+++ b/TE/CharlaVillacerrada.html
@@ -5,28 +5,35 @@
     <title>Charlas en el Centro Sociocultural Barrio Centro</title>
 </head>
 <body>
-    
-        <div>
-            <p>
-                Los pasados lunes, 23 de noviembre, y miércoles, 25 de noviembre, 
-                el <strong>Centro Sociocultural Barrio Centro</strong>, situado en 
-                la plaza de Villacerrada, acogió al Teléfono de la Esperanza.
-            </p>
-            <p>
-                Elena Vargas, psicóloga del T.E. de Albacete, les habló el lunes 
-                sobre la importancia de cuidar la <strong>salud emocional</strong> 
-                de las personas que nos rodean y la de uno mismo/a, y el miércoles 
-                sobre <strong>la prevención del suicidio</strong>. También
-                explicó los recursos que ofrece el Teléfono de la Esperanza al 
-                respecto de estos asuntos.
-            </p>
-            <blockquote>
-                “Espacio para la impresión personal de Elena”
-            </blockquote>
-            <p>
-                Se muestra a continuación fotografías de estas charlas.
-            </p>
-        </div>
-    
+
+    <div>
+        <p>
+            Los pasados lunes, 23 de noviembre, y miércoles, 25 de noviembre,
+            el <strong>Centro Sociocultural Barrio Centro</strong>, situado en
+            la plaza de Villacerrada, acogió al Teléfono de la Esperanza.
+        </p>
+        <p>
+            Elena Vargas, psicóloga del T.E. de Albacete, les habló el lunes
+            sobre la importancia de cuidar la <strong>salud emocional</strong>
+            de las personas que nos rodean y la de uno mismo/a, y el miércoles
+            sobre <strong>la prevención del suicidio</strong>. También
+            explicó los recursos que ofrece el Teléfono de la Esperanza al
+            respecto de estos asuntos.
+        </p>
+        <blockquote>
+            “Espacio para la impresión personal de Elena”
+        </blockquote>
+        <p>
+            Se muestra a continuación fotografías de estas charlas.
+        </p>
+        <img id="ikv5j" src="https://telefonodelaesperanza.org/media/albacete/WhatsApp%20Image%202022-11-28%20at%2013.08.59(1).jpeg" />
+        <img id="ii1uu" src="https://telefonodelaesperanza.org/media/albacete/WhatsApp%20Image%202022-11-28%20at%2013.08.59.jpeg" />
+        <img id="ipqki" src="https://telefonodelaesperanza.org/media/albacete/WhatsApp%20Image%202022-11-28%20at%2013.08.58(1).jpeg" />
+        <img id="i69rk" src="https://telefonodelaesperanza.org/media/albacete/%C3%ADndice.jpg" />
+    </div>
+
+
+
+
 </body>
 </html>
