Actualización de jornadas de la muerte.

--- a/TE/20230131JornadasMuerteRealizadas.html
+++ b/TE/20230131JornadasMuerteRealizadas.html
@@ -92,6 +92,9 @@
         <p>
             El vídeo de Rozalén se puede ver en el siguiente enlace de Instagram: <a href="https://www.instagram.com/p/CoKtdU6pD3z/" target="_blank">https://www.instagram.com/p/CoKtdU6pD3z/</a>
         </p>
+        <p>
+            Todos los vídeos de las ponencias de las jornadas se pueden ver en el siguiente enlace: <a href="https://www.chospab.es/cursos_jornadas/2023/jornada_buen_morir/intro.htm" target="_blank">https://www.chospab.es/cursos_jornadas/2023/jornada_buen_morir/intro.htm</a>.
+</p>
     </div>
 </body>
 </html>
