Presentación de libro "La Niña Amarilla"

--- a/TE/20230306TallerFortalecimiento.html
+++ b/TE/20230306TallerFortalecimiento.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <p>
-            <span>Nos agrada compartir con vosotr@s una nueva edición del <strong>Taller de Fortalecimiento Personal</strong>.
+            Nos agrada compartir con vosotr@s una nueva edición del <strong>Taller de Fortalecimiento Personal</strong>.
         </p>
         <p>
             Dirigido a jóvenes con edades comprendidas entre 18 y 30 años, su objetivo es contribuir a 
