Actividad de curso I de desarrollo personal.

--- a/TE/20230606DesarrolloPersonalModuloI2023Trimestre3.html
+++ b/TE/20230606DesarrolloPersonalModuloI2023Trimestre3.html
@@ -12,8 +12,8 @@
                 Sigue las instrucciones en el apartado <strong>CÓMO REALIZAR LA MATRÍCULA</strong>
             </span>
         </p>
-        <p style="color: blue;">
-            Comenzamos un <strong style="color: blue;">nuevo ciclo formativo para las personas interesadas en formarse para colaborar y ser voluntari@s del Teléfono de la Esperanza</strong>.
+        <p style="color: dodgerblue;">
+            Comenzamos un <strong style="color: dodgerblue;">nuevo ciclo formativo para las personas interesadas en formarse para colaborar y ser voluntari@s del Teléfono de la Esperanza</strong>.
         </p>
         <p style="text-align: center;">
             ABIERTO EL PLAZO DE MATRÍCULA
@@ -21,13 +21,13 @@
         <p>
             El primer curso de la formación, <strong>DESARROLLO PERSONAL MOD. I</strong>, está <strong>dirigido a la población general</strong>, es decir, tanto a las personas que quieren prepararse para realizar un voluntariado en la asociación, como aquellas que quieran realizar un proceso de autoconocimiento al margen de la colaboración.
         </p>
-        <p style="color: blue;">
-            Con un enfoque teórico y vivencial, en este primer módulo los 
-            participantes llevarán a cabo una exploración, comprensión y 
-            reestructuración de sus dimensiones personales, profundizando en 
-            las dimensiones cognitiva y psicoafectiva, a través de la 
-            revisión de la estructura de personalidad, los mensajes 
-            parentales, las emociones, los apegos y la autoestima.
+        <p style="color: dodgerblue;">
+            Con un enfoque teórico y vivencial, en este primer módulo 
+            los participantes llevarán a cabo una exploración, comprensión 
+            y revisión de sus dimensiones personales, profundizando en las 
+            dimensiones cognitiva y psicoafectiva, que engloban la 
+            estructura de personalidad, los mensajes parentales, 
+            las emociones, los apegos y la autoestima.
         </p>
         <p>
             <strong>Intensivo:</strong>
@@ -46,16 +46,16 @@
         <p style="text-align: center;">
             RESERVA YA
         </p>
-        <p style="text-align: center; color: blue;">
+        <p style="text-align: center; color: dodgerblue;">
             (plazas limitadas por orden de inscripción)
         </p>
-        <p style="text-align: center;>
+        <p style="text-align: center;">
             <strong>CÓMO REALIZAR LA RESERVA, 2 OPCIONES:</strong>
         </p>
         <ol>
             <li>
                 <strong>SE REALIZARÁ TODO POR MAIL</strong>: Mandando a
-                <a href="mailto: albacete@telefonodelaesperanza.org" style="color:dodgerblue">albacete@telefonodelaesperanza.org</a>
+                <a href="mailto:albacete@telefonodelaesperanza.org" style="color: dodgerblue;">albacete@telefonodelaesperanza.org</a>
                 <ul>
                     <li>
                         ficha de inscripción (solicitar por mail o
@@ -70,7 +70,7 @@
             <li>
                 <strong>
                     SE REALIZARÁ TODO EN LA SEDE
-                </strong>:<br />
+                </strong>:<br>
                 Ficha de inscripción, foto y pago en efectivo o resguardo del ingreso.
             </li>
         </ol>
@@ -81,7 +81,7 @@
             </strong>
         </p>
         <p style="text-align: center;">
-            <strong>IBAN ES37 2048 4420 9134 0000 8595</strong>
+            <strong>IBAN ES92 2103 7227 5700 3001 5574</strong>
         </p>
         <p style="text-align: center;">
             En el concepto poner: Aportación + Nombre completo
