Cambio en título y corrección de errata.

--- a/TE/20230918VentaEntradasCuentoterapia.html
+++ b/TE/20230918VentaEntradasCuentoterapia.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Anuncio de puntos de venta de entradas para la charla de Cuentoterapia</title>
+    <title>PUNTOS DE VENTA DE ENTRADAS PARA LA CHARLA DE CUENTOTERAPIA</title>
 </head>
 <body>
         <div>
             <p>
                 Tenemos el gusto de anunciaros los puntos de venta de las entradas para 
-                <strong>la charla de Cuentoterapia</strong> que tendrá lugar el próximo miércoles
+                <strong>la charla de Cuentoterapia</strong> que tendrá lugar el próximo jueves
                 <strong>día 21 de septiembre en el Centro Ágora (C/ Lepanto 55) a las 18h de la tarde</strong>, con el título
                 <u>
                     <em>“El suicidio no es un cuento, pero si yo te contara…”</em>
