Noticias de desarrollo personal y de inteligencia emocional.

--- a/TE/20230606DesarrolloPersonalModuloI2023Trimestre3.html
+++ b/TE/20230606DesarrolloPersonalModuloI2023Trimestre3.html
@@ -32,16 +32,20 @@
         <p>
             <strong>Intensivo:</strong>
         </p>
-        <p> <span style="color: red;">Días 6, 7 y 8 de Octubre </span> (viernes 17-21h,
-            sábado 9:00-14h / 16-21h, y domingo 9:30-14:30h)
-        </p>
+        <p>
+            <span style="color: red;">Días 6, 7 y 8 de Octubre </span> (viernes 17-21h,
+            sábado 9:00-14h / 16-21h, y domingo 9:30-14:30h) en la Parroquia de Nuestra 
+            Señora de las Angustias y San Felipe Neri, conocida como 
+            <strong><span style="color: red;">Los Filipenses</span></strong>, en 
+            la calle Arcángel San Gabriel, 11.
+</p>
         <p>
             <strong>Seguimiento:</strong>
         </p>
         <p>8 sesiones con frecuencia semanal y 2h de duración <span style="color: red;">*el día se concreta en el intensivo. </span>
         </p>
         <p style="color: green;">
-            Aportación 150€ / 25€ de Reserva.
+            Aportación 150€.
         </p>
         <p style="text-align: center;">
             RESERVA YA
@@ -63,7 +67,7 @@
                         <a href="https://docs.google.com/document/d/1cIzTl8a0_75XIsHunKiuA0QVerx-ytBW/edit?usp=sharing&ouid=109398326214633490453&rtpof=true&sd=true" style="color:dodgerblue">aquí</a>),
                     </li>
                     <li>foto y</li>
-                    <li>resguardo del ingreso de la reserva: <span style="color: green;">25€</span> (no reembolsable)</li>
+                    <li>resguardo del ingreso de la matrícula: <span style="color: green;">150€</span></li>
                 </ul>
                  
             </li>
@@ -76,7 +80,7 @@
         </ol>
         <p style="text-align: center;">
             <strong style="color: green;">
-                El resto de la matrícula (100€) se abonará la última semana de
+                Las personas que realizaron la reserva de 25 € abonarán el resto de la matrícula (125€) durante la última semana de
                 septiembre en el mismo número de cuenta
             </strong>
         </p>
