Más videos de la charla de cuentoterapia.

--- a/TE/20230922ElSuicidioNoEsUnCuento.html
+++ b/TE/20230922ElSuicidioNoEsUnCuento.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <p>
-            Ayer 21 de septiembre de 2023 en el centro Ágora de Albacete 
+            Ayer 21 de septiembre de 2023 en el centro Ágora de Albacete
             Lorenzo Hernández Pallarés, el creador de la cuentoterapia, abordó
             el problema del suicidio con una charla titulada
             <em>“El suicidio no es un cuento, pero si yo te contara…”</em>.
@@ -30,7 +30,12 @@
             Ágora en el que Lorenzo os cuenta un cuento para iniciaros sensiblemente:
             <a href="https://fb.watch/nd9PKU5Qjq/" style="color:dodgerblue">
                 https://fb.watch/nd9PKU5Qjq/
-            </a>
+            </a>. En <a href="https://youtu.be/5_zyHR_5vEY" style="color:dodgerblue">
+                https://youtu.be/5_zyHR_5vEY
+            </a> podéis ver " Viaje a la alegría" y en
+            <a href="https://youtu.be/gNCjix0MIPU" style="color:dodgerblue">
+                https://youtu.be/gNCjix0MIPU</a> "Nombres robados", un cuento sobre cómo evitar
+            llegar a la acción suicida.
         </p>
         <p>
             Gracias a todas las personas que estuvisteis, vuestra aportación nos ayuda a
