Noticias sobre grafiti de la Esperanza.

--- a/TE/20230929ArchivoCuentoterapia.html
+++ b/TE/20230929ArchivoCuentoterapia.html
@@ -2,51 +2,40 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Descubre el Poder de la Inteligencia Emocional: ¡Inscríbete en Nuestro Curso!</title>
+    <title>Compartiendo Recursos: Presentación de la Charla de Cuentoterapia</title>
 </head>
 <body>
     <div>
         <p>
-            <strong>¡Descubre el Poder de la Inteligencia Emocional!</strong>
+            Como parte de nuestra continua misión de compartir información valiosa y recursos 
+            útiles con nuestra comunidad, nos complace compartir la presentación en PowerPoint 
+            utilizada durante la reciente charla de <strong>"El suicidio no es un cuento, pero 
+            si yo te contara…"</strong> impartida por <strong>Lorenzo Hernández Pallarés</strong> 
+            en el Centro Ágora de Albacete.
         </p>
         <p>
-            ¿Estás buscando una forma de mejorar tu bienestar emocional
-            y tus relaciones personales? ¡Podemos ayudarte! Te invitamos a
-            inscribirte en nuestro <strong>curso de Inteligencia Emocional</strong>.
+            En esta presentación, el reconocido psicólogo y psicoterapeuta Lorenzo Hernández 
+            Pallarés abordó de manera comprensiva y sensible el tema del suicidio. La 
+            presentación incluye datos y estrategias para abordar esta difícil realidad, 
+            así como el poder de los cuentos en la prevención del suicidio. A través de cuentos, 
+            se exploraron diferentes aspectos emocionales y se ofrecieron enfoques para 
+            la conexión con la vida y la prevención.
         </p>
         <p>
-            <strong>¿Por qué la Inteligencia Emocional es tan importante?</strong>
+            Queremos compartir este recurso con todos/as vosotros/as, ya que creemos que puede ser 
+            valioso para quienes deseen profundizar en el tema o para aquellos/as que no pudieron 
+            asistir a la charla en persona.
         </p>
         <p>
-            La <strong>Inteligencia Emocional</strong> es la habilidad de reconocer, comprender
-            y gestionar tus propias emociones, así como las de los demás.
-            Esta capacidad te permite tomar decisiones más acertadas, fortalecer
-            tus relaciones interpersonales y manejar el estrés de manera efectiva.
+            Podéis acceder a la presentación en PowerPoint a través del siguiente enlace: 
+            <a href="https://docs.google.com/presentation/d/101NhUM3RECv0BTz52tJekSaqynIAh1It/edit?usp=sharing&ouid=115813842457211555026&rtpof=true&sd=true" 
+               style="color:dodgerblue">Descargar la presentación</a>.
         </p>
         <p>
-            <strong>Detalles del Curso:</strong>
-        </p>
-        <ul>
-            <li><strong>Fecha de inicio:</strong> lunes, 16 de octubre a las 19:30</li>
-            <li><strong>Duración:</strong> 8 sesiones con frecuencia semanal</li>
-            <li><strong>Horario:</strong> lunes de 19:30 a 21:30</li>
-            <li><strong>Lugar:</strong> C/ Federico García Lorca, 20 - 1º</li>
-        </ul>
-        <p>
-            No pierdas esta oportunidad de invertir en ti mismo y en tu futuro.
-            ¡Inscríbete ahora y descubre cómo la <strong>Inteligencia Emocional</strong> puede
-            cambiar tu vida para mejor!
-        </p>
-        <p>
-            Para más información y para inscribirte,
-            visita <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-inteligencia-emocional-en-octubre-de-2023-9908" target="_blank" style="color: blue;">
-                https://telefonodelaesperanza.org/albacete/cursos-y-talleres/curso-inteligencia-emocional-en-octubre-de-2023-9908
-            </a>
-            o contáctanos al <strong>967 52 34 34</strong>.
-        </p>
-        <p>
-            Te esperamos con los brazos abiertos para acompañarte en este
-            emocionante <strong>viaje</strong>.
+            Agradecemos vuestra participación en nuestra misión de prevención del suicidio. Si 
+            tienes ideas suicidas o te sientes desbordada/o por tu sufrimiento
+            emocional, <strong>llámanos</strong>, y si conoces a alguien en esta
+            situación, dale nuestros teléfonos, 967 52 34 34 y 717 003 717.
         </p>
     </div>
 </body>
