Noticia sobre grafiti de la Esperanza.

--- a/TE/20231009InauguraciónGrafitti.html
+++ b/TE/20231009InauguraciónGrafitti.html
@@ -6,18 +6,86 @@
 </head>
 <body>
     <div>
-        <p>Mañana, <strong>10 de octubre de 2023, a las 17:30</strong>, con motivo del <strong>Día Mundial de Salud Mental</strong>, se llevará a cabo la inauguración de un graffiti especial en una de las paredes del recinto de la piscina municipal del Paseo de la Cuba. Este magnífico arte urbano ha sido creado por <strong>Verónica Plaza Art y Juan Ga Cedos</strong>, en colaboración con jóvenes talentosos de nuestra ciudad.</p>
-        <p>El motivo detrás de esta obra de arte es la campaña <strong>"Hope is in the air" (La esperanza está en el aire)</strong>, que este año es el lema de la campaña nacional para la prevención del suicidio llevada a cabo por el Teléfono de la Esperanza.</p>
-        <p style="color: mediumseagreen;">
-            Y para eso, PARA QUE SE VEA, hemos creado este GRAFITI que LLAMA LA ATENCIÓN
-            sobre esta causa y nos infunde ESPERANZA.
-        </p>
-        <p>Al evento asistirán destacadas personalidades, incluyendo a <strong>Llanos Navarro González</strong>, Concejala de calidad de vida y asuntos sociales, así como <strong>Gala de la Calzada</strong>, concejala de personas e igualdad. Además, personas que han participado en la creación de este graffiti compartirán sus emociones y experiencias durante el proceso de pintura.</p>
-        <p>Invitamos a toda la ciudadanía a unirse a nosotros/as en este importante acto, ya que su presencia es fundamental para sensibilizar y concienciar sobre la prevención del suicidio. Juntos, podemos difundir un mensaje de esperanza y apoyo.</p>
-        <p style="color: mediumseagreen;">No faltes a esta emotiva inauguración y ayúdanos a marcar la diferencia. <strong>Tu presencia cuenta</strong>.</p>
-        <p>Gracias a Verónica Plaza Art y Juan Ga Cedos, así como a todos los jóvenes artistas involucrados, por realizar este graffiti que nos recuerda que <strong>la esperanza está en todos lados, si miras, si buscas, si te dejas ayudar... Hope is in the air</strong>.</p>
-        <p>¡Anímate a hacerte una foto frente al graffiti y compártela en tus redes sociales como muestra de apoyo a la campaña! Utiliza el hashtag <strong>#HopeIsInTheAir</strong> para que podamos ver y compartir tu apoyo.</p>
-        <p><strong>Fecha</strong>: 10 de octubre<br><strong>Hora</strong>: 17:30<br><strong>Lugar</strong>: Exterior del recinto de la piscina municipal del Paseo de la Cuba</p>
+        <!--#iag1k{
+        color:black;
+        }
+        #ie6bq{
+        color:black;
+        }
+        #iwfol{
+        color:black;
+        }
+        #ipowm{
+        color:black;
+        }
+        #i2vrx{
+        color:black;
+        }
+        #iwxt7{
+        color:black;
+        }
+        #iobik{
+        color:mediumseagreen;
+        }
+        #ig5f5{
+        color:mediumseagreen;
+        }-->
+        <div>
+            <div>
+                <p>
+                    Mañana,
+                    <strong>10 de octubre de 2023, a las 17:30</strong>, con motivo del
+                    <strong>Día Mundial de Salud Mental</strong>, se llevará a cabo la inauguración de un graffiti especial en una de las paredes del recinto de la piscina municipal del Paseo de la Cuba. Este magnífico arte urbano ha sido creado por
+                    <strong>Verónica Plaza Art y Juan Ga Cedos</strong>, en colaboración con jóvenes talentosos de nuestra ciudad.
+                </p>
+            </div>
+            <img id="iag1k" src="https://telefonodelaesperanza.org/media/albacete/20231009Graffittijpg.jpg" />
+            <p>
+                El motivo detrás de esta obra de arte es la campaña
+                <strong>"Hope is in the air" (La esperanza está en el aire)</strong>, que este año es el lema de la campaña nacional para la prevención del suicidio llevada a cabo por el Teléfono de la Esperanza.
+                <br />
+            </p>
+            <div>
+                <p id="iobik">
+                    Y para eso, PARA QUE SE VEA, hemos creado este GRAFITI que LLAMA LA ATENCIÓN
+                    sobre esta causa y nos infunde ESPERANZA.
+                </p>
+            </div>
+            <img id="ie6bq" src="https://telefonodelaesperanza.org/media/albacete/20231009MujerHope.jpg" />
+            <p>
+                Al evento asistirán destacadas personalidades, incluyendo a
+                <strong>Llanos Navarro González</strong>, Concejala de calidad de vida y asuntos sociales, así como
+                <strong>Gala de la Calzada</strong>, concejala de personas e igualdad. Además, personas que han participado en la creación de este graffiti compartirán sus emociones y experiencias durante el proceso de pintura.
+            </p>
+            <img id="iwfol" src="https://telefonodelaesperanza.org/media/albacete/20231009Pintando.jpg" />
+            <p>
+                Invitamos a toda la ciudadanía a unirse a nosotros/as en este importante acto, ya que su presencia es fundamental para sensibilizar y concienciar sobre la prevención del suicidio. Juntos, podemos difundir un mensaje de esperanza y apoyo.
+            </p>
+            <img id="i2vrx" src="https://telefonodelaesperanza.org/media/albacete/20231009Se%C3%B1alando.jpg" />
+            <p>
+                Gracias a Verónica Plaza Art y Juan Ga Cedos, así como a todos los jóvenes artistas involucrados, por realizar este graffiti que nos recuerda que
+                <strong>la esperanza está en todos lados, si miras, si buscas, si te dejas ayudar... Hope is in the air</strong>.
+            </p>
+            <div>
+                <p id="ig5f5">
+                    No faltes a esta emotiva inauguración y ayúdanos a marcar la diferencia.
+                    <strong>Tu presencia cuenta</strong>.
+                </p>
+            </div>
+            <img id="iwxt7" src="https://telefonodelaesperanza.org/media/albacete/20231009Cuatro.jpg" />
+            <p>
+                ¡Anímate a hacerte una foto frente al graffiti y compártela en tus redes sociales como muestra de apoyo a la campaña! Utiliza el hashtag
+                <strong>#HopeIsInTheAir</strong> para que podamos ver y compartir tu apoyo.
+            </p>
+            <img id="ipowm" src="https://telefonodelaesperanza.org/media/albacete/20231009FotoconEsperanza.jpg" />
+            <p>
+                <strong>Fecha</strong>: 10 de octubre
+                <br />
+                <strong>Hora</strong>: 17:30
+                <br />
+                <strong>Lugar</strong>: Exterior del recinto de la piscina municipal del Paseo de la Cuba
+            </p>
+        </div>
     </div>
 </body>
 </html>
