Incluir logo de Fundación La Caixa. Poner en grande el logo de la Diputación de Albacete.

--- a/TE/20240501Logotipos.html
+++ b/TE/20240501Logotipos.html
@@ -10,7 +10,7 @@
             <img id="i2lb" src="https://telefonodelaesperanza.org/media/albacete/JCCM.png" style="max-width: 175px;"/>
         </div>
         <div id="ieoz" style="min-height: 75px; flex-grow: 1; flex-basis: 100%; margin-top: 10%;">
-            <img id="iand" src="https://telefonodelaesperanza.org/media/albacete/Diputacion-AB.png" style="max-width: 175px;" />
+            <img id="iand" src="https://telefonodelaesperanza.org/media/albacete/Diputacion-AB-grande.png" style="max-width: 175px;" />
         </div>
     </div>
     <div id="ijw7" style="display: flex; justify-content: flex-start; align-items: stretch; flex-wrap: nowrap; padding: 10px;">
@@ -25,7 +25,8 @@
         <div style="min-height: 75px; flex-grow: 1; flex-basis: 100%; margin-top: 10%;">
             <img id="i9tsk" src="https://telefonodelaesperanza.org/media/albacete/180413_Logo%20Asisa.jpg" style="max-width: 175px;" />
         </div>
-        <div style="min-height: 75px; flex-grow: 1; flex-basis: 100%;">
+        <div style="min-height: 75px; flex-grow: 1; flex-basis: 100%; margin-top: 10%;">
+            <img id="ixkco" src="https://telefonodelaesperanza.org/media/albacete/F-la-Caixa-Color-Pos-grande.jpg" style="max-width: 175px;" />
         </div>
     </div>
 </body>
