Correcciones en los talleres.

--- a/TE/20240928AfrontarLaRuptura.html
+++ b/TE/20240928AfrontarLaRuptura.html
@@ -35,7 +35,7 @@
             </span>
         </p>
         <p style="color: green;">
-            Este curso es <strong>gratuito</strong> por formar parte del área de intervención
+            Este curso es <b>gratuito</b> por formar parte del área de intervención
             en crisis, pero agradeceremos tu colaboración aportando un donativo si lo crees 
             oportuno para cubrir los gastos de las actuaciones que llevamos a cabo desde 
             la Asociación Teléfono de la Esperanza.
@@ -58,7 +58,7 @@
             <li>
                 <span style="color:deepskyblue">SE REALIZARÁ TODO POR MAIL</span>: Mandando a
                 <a href="mailto: albacete@telefonodelaesperanza.org">albacete@telefonodelaesperanza.org</a>
-                <strong>ficha de inscripción</strong> (solicitar por mail o
+                <strong> ficha de inscripción</strong> (solicitar por mail o
                 <strong>descargarla </strong>
                 <a href="https://docs.google.com/document/d/1Si0uXFyIWfqeD8R1-EmNjco8ASOE3DMX/edit?usp=sharing&ouid=109398326214633490453&rtpof=true&sd=true" style="color:dodgerblue">aquí</a> 
                 para poder enviarla rellena), <strong>foto</strong> y <strong>resguardo</strong> 
@@ -73,7 +73,11 @@
         </ol>
         <span style="font-size: 75%;">
             <p>
-                Debe evitarse por inconveniencia que se integren en el mismo grupo personas con parentesco (parejas, hermanos, padres-hijos) o con una relación muy íntima, para facilitar la apertura y la expresión emocional. Si es tu caso, te invitamos a que uno de vosotros/as se incorpore en otro taller de “Afrontar la ruptura” diferente a este.
+                Debe evitarse por inconveniencia que se integren en el mismo grupo personas 
+                con parentesco (parejas, hermanos, padres-hijos) o con una relación muy íntima, 
+                para facilitar la apertura y la expresión emocional. Si es tu caso, te 
+                invitamos a que uno de vosotros/as se incorpore en otro taller de 
+                “Afrontar la ruptura” diferente a este.
             </p>
         </span>
 </div>
