--- a/TE/20240928Autoestima.html
+++ b/TE/20240928Autoestima.html
@@ -55,7 +55,7 @@
         <strong>CÓMO REALIZAR LA MATRÍCULA, 2 OPCIONES:</strong>
         <ol>
             <li>
-                <span style="color:deepskyblue">SE REALIZARÁ TODO <strong>POR MAIL</strong></span>: Mandando a
+                <span style="color:deepskyblue">SE REALIZARÁ TODO POR MAIL</span>: Mandando a
                 <a href="mailto: albacete@telefonodelaesperanza.org">albacete@telefonodelaesperanza.org</a>
                 <strong>
                     ficha de inscripción
@@ -67,7 +67,7 @@
             </li>
             <li>
                 <span style="color:deepskyblue">
-                    SE REALIZARÁ TODO EN <strong>LA SEDE</strong>
+                    SE REALIZARÁ TODO EN LA SEDE
                 </span>:
                 Ficha de inscripción, foto y pago en efectivo o resguardo del ingreso.
             </li>
