Corrección en Constelaciones Circulares.

--- a/TE/20241215ConstelacionesCirculares.html
+++ b/TE/20241215ConstelacionesCirculares.html
@@ -11,7 +11,9 @@
 
     <h3>¿Qué son las Constelaciones Circulares?</h3>
     <p>
-        Las constelaciones circulares son una forma de trabajo en grupo que nos permite explorar y comprender dinámicas personales y colectivas. Pero, ¿qué significa esto realmente?
+        Son un modo de estar en presencia en la vida en relación a los otros. Las dinámicas
+        grupales que haremos en este taller nos permitirán explorar y comprender de una
+        manera más personal y colectiva. Pero, ¿qué significa esto realmente?
         Se trata de un proceso donde las personas comparten su experiencia y conectan, llevando a cabo una especie de exploración conjunta. Así, se logran percepciones y entendimientos profundos.
         Es un viaje a través de la conexión humana que, aunque parece simple, es realmente muy profundo.
     </p>
@@ -50,6 +52,7 @@
             <p>IBAN: ES92 2103 7227 5700 3001 5574</p>
             <p>En el concepto poner: taller circulares + Nombre completo</p>
             <p>O bien solicitar la hoja de socio a rellenar (para realizar la aportación haciéndose socio).</p>
+            <p>Se puede descargar <a href="https://drive.google.com/file/d/1--IGSB4B6xCuyYsH9UivItOXydprKYw-/view?usp=drive_link" style="color:dodgerblue">aquí</a> un documento PDF con más información.</p>
 
             <p><em>IMPORTANTE:</em> POR MOTIVO DE LAS FESTIVIDADES DE NAVIDAD SE CONTESTARÁ A TODAS LAS SOLICITUDES DE INSCRIPCIÓN A PARTIR DEL 7 DE ENERO.</p>
 </body>
