Actualiza disponibilidad de taller y curso completo
En `20250122Calendario2025T1.html`, se añadió una nota al enlace del taller de "Chi Kung y otras técnicas de Meditación y Relajación" indicando que ya no quedan plazas disponibles.

En `20250122ChiKung.html`, se añadió un párrafo en rojo al inicio del documento informando que el curso está completo y que las inscripciones adicionales pasarán a la lista de reserva o a la siguiente convocatoria.

--- a/TE/20250122Calendario2025T1.html
+++ b/TE/20250122Calendario2025T1.html
@@ -17,7 +17,7 @@
                 <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-autoestima-en-febrero-de-2025-10321" style="color:dodgerblue">Autoestima</a>
             </li>
             <li>
-                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-de-chi-kung-y-otras-tecnicas-de-meditacion-y-relajacion-10323" style="color:dodgerblue">Chi Kung y otras técnicas de Meditación y Relajación</a>
+                <a href="https://telefonodelaesperanza.org/albacete/cursos-y-talleres/taller-de-chi-kung-y-otras-tecnicas-de-meditacion-y-relajacion-10323" style="color:dodgerblue">Chi Kung y otras técnicas de Meditación y Relajación</a>. De este taller ya no quedan plazas.
             </li>
         </ul>
         <p>
