--- a/TE/20250122ChiKung.html
+++ b/TE/20250122ChiKung.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div>
+        <p style="color: red; font-size: 133%; ">
+            Curso completo, las inscripciones que se realicen a partir de ahora pasarán a la reserva por si hay alguna baja y en su defecto a la siguiente convocatoria del curso.
+        </p>
         <p>
             <span style="font-size: 133%;">
                 <strong>
